--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">
     <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">
     <title>W3A</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Pandas" />
+    <meta property="og:description" content="giant panda red panda trash panda" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Pandas" />
+    <meta property="twitter:description" content="giant panda red panda trash panda" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta author="Clateman">
+    <meta descritio="giant panda red panda trash panda">
+    <meta keywords="giantpanda redpanda trashpanda">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>Hello World!</p>
+    <h1>Pandas</h1>
+    <main>
+        <article class="inline-black-white">
+            <h2 id="giant-panda">Black and White</h2>
+            <img src="images/giantpanda.jpg" alt="giant panda">
+            <p>The classic</p>
+        </article>
+        <article class="inline-black-white">
+            <h2 id="red-panda">Red</h2>
+            <img src="images/redpanda.jpg" alt="red panda">
+            <p>the ultra rare</p>
+        </article>
+        <article class="inline-black-white">
+            <h2 id="trashy-panda">Trashy one</h2>
+            <img src="images/trashpanda.jpg" alt="trash panda">
+            <p style="color:white">the american</p>
+        </article>
+    </main>
 </body>
 </html>
