--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 <body>
     <h1>Pandas</h1>
     <main>
-        <article class="inline-black-white">
-            <h2 id="giant-panda">Black and White</h2>
+        <article class="transition1 inline-black-white">
+            <h2 class="transition6" id="giant-panda">Black and White</h2>
             <img src="images/giantpanda.jpg" alt="giant panda">
             <p>The classic</p>
         </article>
-        <article class="inline-black-white">
-            <h2 id="red-panda">Red</h2>
+        <article class="transition2 inline-black-white">
+            <h2 class="transition5" id="red-panda">Red</h2>
             <img src="images/redpanda.jpg" alt="red panda">
             <p>the ultra rare</p>
         </article>
-        <article class="inline-black-white">
-            <h2 id="trashy-panda">Trashy one</h2>
+        <article class="transition3 inline-black-white">
+            <h2 class="tranisiton4" id="trashy-panda">Trashy one</h2>
             <img src="images/trashpanda.jpg" alt="trash panda">
             <p style="color:white">the american</p>
         </article>
