--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta author="Clateman">
     <meta descritio="giant panda red panda trash panda">
     <meta keywords="giantpanda redpanda trashpanda">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <h1>Pandas</h1>
